# rusty-cellar-door

./: Cargo.toml  run.sh
src/: app.rs  auth.rs  index.rs  login.rs  main.rs  token.rs
static/: main.css
templates/: auth.html  forbidden.html  head.html  index.html  layout.html  login.html
