[package]
name = "rusty-cellar-door"
version = "0.1.0"
authors = ["snorre"]

[dependencies]
actix-web = "0.7"
bcrypt = "0.2"
chrono = "0.4.6"
lru_time_cache = "0.8.0"
clap = "2.32"
env_logger = "0.5"
jsonwebtoken = "5.0.0"
listenfd = "0.3"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5.1"
tera = "0.11"
uuid = "0.6.5"